<resources>
    <string name="app_name">Unilorin Scholar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ek_img_content">Export Kit Image</string>

    <string name="cbt_practice_string">CBT Practice</string>

    <string name="quiz_game_string">Quiz Game</string>

    <string name="go_home">Go Home</string>

    <string name="unilorin_updates_string">Unilorin Updates</string>

    <string name="study_past_questions_string">Study Past Questions</string>

    <string name="frequently_asked_questions_string">FrequentlyAsked Questions</string>

    <string name="see_answers_to_questions_other_users_have_asked_string">See answers to questions other users have asked</string>
    <string name="checking_in">Checking in</string>
    <string name="log_out">Log out</string>
    <string name="view">View your profile</string>
    <string name="my_profile">My Profile</string>
    <string name="view_your">View your performance thus far</string>
    <string name="work_flow">Work Flow</string>
    <string name="preferences">Preferences</string>
    <string name="get_updated">Get updated with the latest messages</string>
    <string name="share">Share the app among your friends</string>
    <string name="share_app">Share App</string>
    <string name="rate">Rate Us</string>
    <string name="rating">Give us a nice rating on play Store</string>
    <string name="the_developer">About the developer</string>
    <string name="about_the_developer">Get to know more about the developer</string>
    <string name="communicate">Communicate</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_pin">Enter a 16 digit activation pin to unlock all the series and amazing features in this app. Activation lasts for one academic year.</string>
    <string name="activation">Activation unlocks all past Questions and opens ALL series</string>
    <string name="pin">Pin</string>
    <string name="number">16 Digits Numbers</string>
    <string name="activate">Activate</string>
    <string name="activation_pin">Don\'t have an activation pin? Get one payment</string>
    <string name="choose">CHOOSE A PAYMENT METHOD</string>
    <string name="pay">Pay #800</string>
    <string name="about_the_app">Unilorin Scholar is an app developed to help the Students(Freshers) of the great Institution of the University of
        Ilorin. The questions here have been tested by not just one man but passed through tables of scholars of faculties involved.
    If by any means, you have any untrue solution to any of the questions here, pls contact the developer immediately.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_pay_online">Pay Online</string>
    <string name="paystack">Pay using PayStack</string>
    <string name="bank">Bank Deposit or Transfer</string>
    <string name="bank_deposit">Go down to the nearest banking site around you either a real bank or POS operator and make a deposit of #1000 into any of the account below</string>
    <string name="after_payment">***After payment, send a whatsapp message(SCREENSHOT) containing PAYMENT details to: +2348112568014 and your details in this format
    \n Surname: \n Firstname: \n Username</string>
    <string name="account_name">1. Account name :</string>
    <string name="email">Your Email Address:</string>
    <string name="bank_paid_to">3. Bank paid to and a screenshot of the payment</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="go_to">GO TO</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="check">Check for the correct answer and pick</string>
    <string name="which">Which of the following is correct?</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="question_1_of_30">Question 1 of 30</string>
    <string name="_200l">200l</string>
    <string name="_100l">100l</string>
    <string name="type">Type a message</string>
    <string name="online">Online</string>
    <string name="post_an_answer">Post an answer</string>
    <string name="university">University of Ilorin</string>
    <string name="better">Better By Far</string>
    <string name="unilorin_updates"><a href="https://www.twitter.com" />Unilorin Updates</string>
    <string name="question_phase">Question Phase</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="faculty">Faculty</string>
    <string name="department">Department</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="back_home">Back Home</string>
    <string name="gns_114">GNS 114</string>
    <string name="time">Time</string>
    <string name="cbt">CBT</string>
    <string name="add">Add an image</string>
    <string name="series_five">Series Five</string>
    <string name="series_four">Series Four</string>
    <string name="series_three">Series Three</string>
    <string name="series_two">Series Two</string>
    <string name="series_one">Series One</string>
    <string name="e_mail_address">E mail Address</string>
    <string name="about_us">About us</string>
    <string name="get">Get to know more about the application</string>
    <string name="pay_into_our_official_bank_account">Pay a sum of #500 into our official bank account</string>
    <string name="chm_112">CHM 112</string>
    <string name="gns_112">GNS 112</string>
    <string name="mth_111">MTH 111</string>
    <string name="mth_112">MTH 112</string>
    <string name="mth_113">MTH 113</string>
    <string name="phy_125">PHY 125</string>
    <string name="phy_142">PHY 142</string>
    <string name="phy_152">PHY 152</string>
    <string name="phy_191">PHY 191</string>
    <string name="phy_192">PHY 192</string>
    <string name="select_user">Select User</string>
    <string name="search_user">Search user by username</string>
    <string name="unilorin_n_scholar">UNILORIN \nSCHOLAR</string>
    <string name="one_step_ahead">One Step Ahead</string>
    <string name="enter_pin_here">Enter Activation pin here</string>

</resources>