<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottom_design_entry"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="130dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/series1"
        android:text="@string/series_one"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series1"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/series2"
        android:text="@string/series_two"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series2"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/series3"
        android:text="@string/series_three"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series3"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/series4"
        android:text="@string/series_four"/>

    <Button
        android:layout_width="130dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/series4"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/series5"
        android:text="@string/series_five"/>

</androidx.constraintlayout.widget.ConstraintLayout>