<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IntoChatActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imageProfile"
        app:riv_corner_radius="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:id="@+id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/username"
        android:id="@+id/Username"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        android:text="@string/faculty"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:id="@+id/faculty"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/department"
        app:layout_constraintTop_toBottomOf="@id/faculty"
        android:layout_marginTop="10dp"
        android:text="@string/department"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        android:layout_marginStart="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/button_chat"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@id/department"
        android:layout_marginTop="15sp"
        android:drawableLeft="@drawable/ic_chat"/>

</androidx.constraintlayout.widget.ConstraintLayout>