<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentActivity.ActivateFragment">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtView"
            android:padding="5dp"
            android:layout_marginTop="0dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/enter_pin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUnlock"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/txtView"
            android:layout_marginTop="15dp"
            android:textColor="@color/frequently_asked_questions_color"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/activation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/edtPin"
            android:hint="@string/pin"
            android:autofillHints="creditCardNumber"
            app:layout_constraintTop_toBottomOf="@id/txtUnlock"
            android:inputType="numberPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNum"
            android:text="@string/number"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/edtPin"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClick"
            app:layout_constraintTop_toBottomOf="@id/txtNum"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/activate"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtActivate"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/btnClick"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/activation_pin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text"
            android:padding="10dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@id/txtChoose"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:text="@string/txt_pay_online"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtChoose"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/txtActivate"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/choose"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPay"
            app:layout_constraintStart_toEndOf="@id/txtChoose"
            app:layout_constraintTop_toBottomOf="@id/txtActivate"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/pay"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/mCardViewPaystack"
            android:elevation="10dp"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paystack"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_home"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:id="@+id/rlLayout"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pay using your PayStack ID"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="10dp"
            android:onClick="openLayout"
            android:id="@+id/mCardViewBank"
            app:layout_constraintTop_toBottomOf="@id/mCardViewPaystack"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_arrow_down"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:id="@+id/rlTransfer"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bank_deposit"
                    android:text="@string/bank_deposit"
                    android:textStyle="italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/after_payment"
                    android:layout_below="@id/bank_deposit"
                    android:text="@string/after_payment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/acctName"
                    android:layout_below="@id/after_payment"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/acctName"
                    android:layout_marginTop="10dp"
                    android:id="@+id/emailAdd"
                    android:text="@string/email"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailAdd"
                    android:layout_marginTop="10dp"
                    android:text="@string/bank_paid_to"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="10dp"
            android:onClick="openAcctLayout"
            android:id="@+id/mCardViewNoBank"
            app:layout_constraintTop_toBottomOf="@id/mCardViewBank"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_arrow_down"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:id="@+id/relativeNoAcct"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bank_deposit1"
                    android:text="@string/bank_deposit"
                    android:textStyle="italic"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/after_payment1"
                    android:layout_below="@id/bank_deposit1"
                    android:text="@string/after_payment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/acctName1"
                    android:layout_below="@id/after_payment1"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/acctName1"
                    android:layout_marginTop="10dp"
                    android:id="@+id/emailAdd1"
                    android:text="@string/email"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailAdd1"
                    android:layout_marginTop="10dp"
                    android:text="@string/bank_paid_to"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>




    </LinearLayout>


</ScrollView>

</FrameLayout>